# automation-rag-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
mcp_server/: config.py  milvus_client.py  neo4j_client.py  server.py
